tests/hulk/errors/lexical/stray_tilde.hulk
let x = 5 in print(x ~ 3);
